# rsstvlm

./: .gitignore  app.py  main.py  pyproject.toml
data/cnki/: CNKI-20251017172440178.es6  CNKI-20251017172618129.es6
data/wos/: savedrecs-2020.xls  savedrecs-2021.xls  savedrecs-2022.xls  savedrecs-2023.xls  savedrecs-2024.xls  savedrecs-2025.xls
rsstvlm/: cli.py  logger.py  utils.py
rsstvlm/agent/: agentic_rag.py  base_agent.py  workflow.py
rsstvlm/models/: llms.py
rsstvlm/prompts/: extraction.py
rsstvlm/services/graphrag/: extrator.py  parse.py  pipeline.py  query.py  retrieve.py  store.py  t2c.py
rsstvlm/services/mcp/: client.py  mcp_client.py  mcp_server.py  server.py
rsstvlm/services/rag/: baseline_rag.py  paper_download.py
rsstvlm/services/tools/: airmatters.py  base_tool.py  plot.py
scripts/: app.sh  mcp_server.sh
scripts/rag/: build_graph.sh  download_papers.sh
scripts/vllm/: vllm_qwen.sh  vllm_qwen3vl.sh
src/rsstvlm/rag/: paper_download.py
