[project]
name = "rsstvlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "h5py>=3.14.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "llama-cloud-services>=0.6.54",
    "llama-index>=0.13.2",
    "mcp[cli]>=1.18.0",
    "pyproj>=3.7.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "salem>=0.3.11",
    "tqdm>=4.67.1",
    "xarray>=2025.10.1",
    "xesmf>=0.8.10",
    "xlrd>=2.0.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "qwen-vl-utils==0.0.14",
    "sentence-transformers>=5.1.1",
    "accelerate>=1.11.0",
    "flashinfer-python>=0.3.1.post1",
    "graspologic>=3.4.4",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "nvitop>=1.5.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["rsstvlm"]

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "FA",   # flake8-future-annotations
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019", "RUF018"]

[tool.ruff.lint.mccabe]
max-complexity = 10
