[project]
name = "rsstvlm"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "llama-index>=0.14.9",
    "llama-index-llms-openai-like>=0.5.3",
    "fastmcp>=2.13.3",
    "graspologic>=3.3.0",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "streamlit>=1.52.0",
    "h5py>=3.15.1",
    "vllm>=0.12.0",
    "llama-index-tools-tavily-research>=0.4.2",
    "llama-index-vector-stores-neo4jvector>=0.5.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["rsstvlm"]

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "FA",   # flake8-future-annotations
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019", "RUF018"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*" = ["RUF002"]
